--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,8 @@ header {
   margin-top: 0;
 }
 
-.card-front, .card-back {
+.card-front,
+.card-back {
   position: absolute;
   width: 100%;
   height: 100%;
